--- a/ht.html
+++ b/ht.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Hobbit</title>
+    <link rel="stylesheet" href="cs.css">
 </head>
 <body>
-    <h1>efvdv</h1>
-    <h2>23949239jv2o</h2>
-    <h3>fwdfdwfwgwegegwewegwe</h3>
+   <div class="container">
+        <div class="item item_1">Приветствуем вас в нашей гостепреимной обители!</div>
+        <div class="item item_2">Добро пожаловать!</div>
+        <div class="item item_3">Будьте как дома!</div>
+        <div class="item item_4">Желаем вам удачного пребывания в нашем скромном уголке отдыха, надеемся вам понравится ваше нахождение здесь!</div>
+        <div class="item item_5">Многое из этого старого здания было сделано руками старинных гномов, прямо в этой горе под названием 'Одинокая Гора'. Предупреждаем вас о том, что все вещи здесь это экспонаты музея, можно трогать, нельзя красть</div>
+        <div class="item item_6">Лучшее для посетителей!</div>
+        <div class="item item_7">Зона отдыха прямо по коридору и направо!</div>
+        <div class="item item_8"><h1>Дварфы</h1></div>
+        <div class="item item_9"><h1>Молоты</h1></div>
+   </div>
 </body>
 </html>
